--- a/example/package.json
+++ b/example/package.json
@@ -1,4 +1,13 @@
 {
   "name": "karma-ng-test-fixture",
-  "version": "0.0.1"
+  "version": "0.0.1",
+  "devDependencies": {
+    "angular": "^1.3.14",
+    "angular-mocks": "^1.3.14",
+    "karma": "^0.12.31",
+    "karma-mocha": "^0.1.10",
+    "karma-ng-test-utils": "0.0.1",
+    "karma-phantomjs-launcher": "^0.1.4",
+    "mocha": "^2.1.0"
+  }
 }
