--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "ng-test-utils plugin for karma",
   "main": "index.js",
   "scripts": {
-    "test": "cd example && npm install && karma start"
+    "test": "cd example && npm install && ./node_modules/karma/bin/karma start"
   },
   "repository": {
     "type": "git",
