--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "karma-ng-test-utils",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "ng-test-utils plugin for karma",
   "main": "index.js",
   "scripts": {
-    "test": "cd example && npm install && ./node_modules/karma/bin/karma start"
+    "test": "cd example && npm i -D .. && npm install && ./node_modules/karma/bin/karma start"
   },
   "repository": {
     "type": "git",
@@ -22,6 +22,6 @@
   },
   "homepage": "https://github.com/jamestalmage/karma-angular-test-utils",
   "dependencies": {
-    "ng-test-utils": "0.0.1"
+    "ng-test-utils": "0.0.2"
   }
 }
