--- a/example/package.json
+++ b/example/package.json
@@ -5,9 +5,15 @@
     "angular": "^1.3.14",
     "angular-mocks": "^1.3.14",
     "karma": "^0.12.31",
+    "karma-chrome-launcher": "^0.1.4",
+    "karma-coffee-preprocessor": "^0.2.1",
     "karma-mocha": "^0.1.10",
     "karma-ng-test-utils": "0.0.2",
     "karma-phantomjs-launcher": "^0.1.4",
     "mocha": "^2.1.0"
+  },
+  "scripts": {
+    "test": "npm i -D .. && karma start",
+    "watch": "npm i -D .. && karma start --auto-watch --no-single-run --browsers Chrome"
   }
 }
