--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   },
   "homepage": "https://github.com/jamestalmage/karma-angular-test-utils",
   "dependencies": {
-    "ng-test-utils": "0.0.2"
-  }
+    "ng-test-utils": "0.0.3",
+    "convert-source-map": "git://github.com/jamestalmage/convert-source-map#4397e24b9a41b19b964ea0a4b6eb0858d6a3450f"
+  },
+  "private": true
 }
