--- a/example/package.json
+++ b/example/package.json
@@ -5,6 +5,7 @@
     "angular": "^1.3.14",
     "angular-mocks": "^1.3.14",
     "karma": "^0.12.31",
+    "karma-angular": "0.0.6",
     "karma-chrome-launcher": "^0.1.4",
     "karma-coffee-preprocessor": "^0.2.1",
     "karma-mocha": "^0.1.10",
