--- a/example/package.json
+++ b/example/package.json
@@ -4,12 +4,16 @@
   "devDependencies": {
     "angular": "^1.3.14",
     "angular-mocks": "^1.3.14",
+    "angular-test-utils-test-utils": "git://github.com/jamestalmage/angular-test-utils-test-utils.git",
+    "gulp": "^3.8.11",
     "karma": "^0.12.31",
     "karma-angular": "0.0.6",
     "karma-chrome-launcher": "^0.1.4",
     "karma-coffee-preprocessor": "^0.2.1",
+    "karma-firefox-launcher": "^0.1.4",
+    "karma-junit-reporter": "^0.2.2",
     "karma-mocha": "^0.1.10",
-    "karma-ng-test-utils": "0.0.3",
+    "karma-ng-test-utils": "0.0.4",
     "karma-phantomjs-launcher": "^0.1.4",
     "mocha": "^2.1.0"
   },
