--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "ng-test-utils plugin for karma",
   "main": "index.js",
   "scripts": {
-    "test": "cd example && npm i -D .. && npm install && gulp && ./node_modules/karma/bin/karma start"
+    "test": "npm i ng-test-utils@0.0.x && gulp && cd example && npm i -D .. && npm install && ./node_modules/karma/bin/karma start"
   },
   "repository": {
     "type": "git",
@@ -23,5 +23,19 @@
   "homepage": "https://github.com/jamestalmage/karma-angular-test-utils",
   "dependencies": {
     "ng-test-utils": "0.0.x"
+  },
+  "devDependencies": {
+    "angular": "^1.3.14",
+    "angular-mocks": "^1.3.14",
+    "angular-test-utils-test-utils": "git://github.com/jamestalmage/angular-test-utils-test-utils.git",
+    "gulp": "^3.8.11",
+    "karma": "^0.12.31",
+    "karma-angular": "0.0.6",
+    "karma-chrome-launcher": "^0.1.4",
+    "karma-coffee-preprocessor": "^0.2.1",
+    "karma-firefox-launcher": "^0.1.4",
+    "karma-junit-reporter": "^0.2.2",
+    "karma-mocha": "^0.1.10",
+    "mocha": "^2.1.0"
   }
 }
