--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "karma-ng-test-utils",
+  "name": "karma-tang",
   "version": "0.0.5",
-  "description": "ng-test-utils plugin for karma",
+  "description": "tang plugin for karma",
   "main": "index.js",
   "scripts": {
     "test": "npm i ng-test-utils@0.0.x && gulp && cd example && npm i -D .. && npm install && ./node_modules/karma/bin/karma start"
@@ -22,7 +22,7 @@
   },
   "homepage": "https://github.com/jamestalmage/karma-angular-test-utils",
   "dependencies": {
-    "ng-test-utils": "0.0.x"
+    "tang": "^0.1.0"
   },
   "devDependencies": {
     "angular": "^1.3.14",
