--- a/example/package.json
+++ b/example/package.json
@@ -13,8 +13,8 @@
     "karma-firefox-launcher": "^0.1.4",
     "karma-junit-reporter": "^0.2.2",
     "karma-mocha": "^0.1.10",
-    "karma-ng-test-utils": "0.0.4",
     "karma-phantomjs-launcher": "^0.1.4",
+    "karma-tang": "^0.1.0",
     "mocha": "^2.1.0"
   },
   "scripts": {
